fix text length overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,10 +81,11 @@ p {
 	/* box model */
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	height: 59px;
 	justify-content: center;
 	padding: 10px;
 	margin: 0;
+	overflow: scroll;
 
 	/* typography */
 	word-wrap: break-word;
